# KVS

./: .gitignore  Cargo.toml  build.rs  project.md
.VSCodeCounter/2022-05-27_00-21-02/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
proto/: kvs.proto
src/: error.rs  kv.rs  lib.rs  rpc.rs  server.rs
src/backend/: kvstore.rs  mod.rs
src/client/: client.rs
src/engines/: kvs.rs
src/percolator/: mod.rs  tsdump.rs
src/raft/: kvraft.rs  raft.rs  raft_node.rs
src/server/: basic_server.rs  builder.rs
src/thread_pool/: mod.rs  naive.rs  rayon.rs  shared_queue.rs
tests/: kv_store.rs  thread_pool.rs  txn.rs  txn_raft.rs
