[package]
name = "kvs"
version = "0.1.0"
authors = ["Lind Xiao"]
edition = "2021"
description = "A key-value store"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.32.0"
dyn-clone = "1.0.3"
num_cpus = "1.13.0"
structopt = "0.3"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.57"
log = "0.4"
env_logger = "0.8.2"
sled = "0.34.6"
rayon = "1.5.0"
crossbeam = "0.8.0"
crossbeam-utils = "0.6.5"
panic-control = "0.1.4"

[dev-dependencies]
assert_cmd = "0.11"
criterion = "0.3.0"
predicates = "1.0.0"
rand = "0.6.5"
tempfile = "3.0.7"
walkdir = "2.2.7"

[[bench]]
name = "benches"
harness = false